--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,6 +51,32 @@
     "typeinfo": "cpp",
     "set": "cpp",
     "filesystem": "cpp",
-    "__split_buffer": "cpp"
+    "__split_buffer": "cpp",
+    "__bit_reference": "cpp",
+    "__bits": "cpp",
+    "__config": "cpp",
+    "__debug": "cpp",
+    "__errc": "cpp",
+    "__hash_table": "cpp",
+    "__locale": "cpp",
+    "__mutex_base": "cpp",
+    "__node_handle": "cpp",
+    "__nullptr": "cpp",
+    "__string": "cpp",
+    "__threading_support": "cpp",
+    "__tree": "cpp",
+    "__tuple": "cpp",
+    "bitset": "cpp",
+    "chrono": "cpp",
+    "compare": "cpp",
+    "complex": "cpp",
+    "concepts": "cpp",
+    "ios": "cpp",
+    "locale": "cpp",
+    "mutex": "cpp",
+    "ratio": "cpp",
+    "stack": "cpp",
+    "variant": "cpp",
+    "__functional_base": "cpp"
   }
 }
