--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,6 +77,7 @@
     "ratio": "cpp",
     "stack": "cpp",
     "variant": "cpp",
-    "__functional_base": "cpp"
+    "__functional_base": "cpp",
+    "__memory": "cpp"
   }
 }
